2002-12-12  Pavel Roskin  <proski@gnu.org>

	* extfs/patchfs.in: Print 4-digit year.  If str2time is not
	available, use current time, not 0.

2002-12-12  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs/urar.in: rar lists directories after files, so sort "list"
	command output by names to prevent duplications.

2002-12-12  Pavel Roskin  <proski@gnu.org>

	* extfs/urar.in: Strengthen quoting.  Don't use full path to rar
	and unrar.  Don't redirect stderr to /dev/null.

	* extfs/uar.in: Simplify "list" command, don't use current year.
	Use more careful quoting.

2002-12-12  Adam Byrtek  <alpha@debian.org>

	* extfs/apt.in: Add non-interactive remove using dpkg.

2002-12-11  Adam Byrtek  <alpha@debian.org>

	* extfs/apt.in: Add 1 to the month number.  Perl localtime()
	uses range 0..11 while extfs expects range 1..12.
	* extfs/deba.in: Likewise.
	* extfs/debd.in: Likewise.
	* extfs/dpkg.in: Likewise.

	* extfs/audio: Move ...
	* extfs/audio.in: ... here.  Add CDDB support.
	* extfs/Makefile.am: Adjust for the above.

2002-12-11  Pavel Roskin  <proski@gnu.org>

	* extfs/mailfs: Try using UnixDate() from Date::Manip if it's
	available.  Warning fix.

2002-12-11  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs/patchfs: Use quotemeta() before giving filename to
	shell.

	* vfs.c (mc_stat): Make first argument const.
	(mc_lstat): Likewise.
	* vfs.h: Adjust declarations and remove some useless defines.

2002-12-10  Pavel Roskin  <proski@gnu.org>

	* extfs/a: Enable Perl warnings.  Ignore entries without a date.
	Warning fixes.  Don't redirect stderr to /dev/null - it doesn't
	mess the screen now.

2002-12-09  Adam Byrtek  <alpha@debian.org>

	* extfs/patchfs: Rewritten in Perl.  File size is now displayed
	properly.

2002-12-09  Pavel Roskin  <proski@gnu.org>

	* extfs/ftplist.in: Remove, it's obsoleted by the hotlist.
	* extfs/ucpio.in: Remove, it's obsoleted by cpio.c.
	* extfs/Makefile.am: Remove all references to them.
	* extfs/extfs.ini: Likewise.
