@@ -11,7 +11,8 @@ sub bt
     my ($dt) = @_;
     my (@time);
     @time = localtime($dt);
-    $bt = sprintf "%02d-%02d-%02d %02d:%02d", $time[4]+1, $time[3], $time[5], $time[2], $time[1];
+    $bt = sprintf "%02d-%02d-%d %02d:%02d", $time[4] + 1, $time[3],
+		  $time[5] + 1900, $time[2], $time[1];
     return $bt;
 }
 
